--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "dependencies": {
     "@blueprintjs/core": "^2.0.0-rc.2",
     "axios": "^0.18.0",
+    "classnames": "^2.2.5",
     "lodash.debounce": "^4.0.8",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
-    "react-transition-group": "^2.2.1"
+    "react-transition-group": "^2.2.1",
+    "styled-components": "^3.1.6"
   },
   "scripts": {
     "start": "react-scripts start",
