--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.5",
     "lodash.debounce": "^4.0.8",
+    "lodash.get": "^4.4.2",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-copy-to-clipboard": "^5.0.1",
